// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Item with data and image 1`] = `
<div
  class="item"
>
  <div
    class="media"
  >
    <img
      src="/admin/image/2"
    />
  </div>
  <div
    class="content"
  >
    <p
      class="title"
    >
      Title
    </p>
    <p
      class="description"
    >
      Description

    </p>
  </div>
  <p
    class="type"
  >
    Page (sulu_page.edited)
  </p>
</div>
`;

exports[`Render Item with data as form 1`] = `
<div
  class="editForm"
>
  <div
    class="form"
  >
    <div
      class="mediaColumn"
    >
      <button
        class="mediaButton"
      >
        <div
          class="mimeTypeIndicator"
          style="color: rgb(255, 255, 255); font-size: 16px; background-color: rgb(246, 126, 0);"
        >
          <span
            aria-label="fa-file-image-o"
            class="fa fa-file-image-o"
          />
        </div>
        <span
          aria-label="su-pen"
          class="su-pen mediaButtonIcon"
        />
      </button>
    </div>
    <div
      class="formColumn"
    >
      <div
        class="titleInput"
      >
        <label
          class="input default left"
        >
          <input
            type="text"
            value="Title"
          />
        </label>
      </div>
      <div
        class="descriptionTextArea"
      >
        <textarea>
          Description
        </textarea>
      </div>
    </div>
  </div>
  <div
    class="buttons"
  >
    <button
      class="button secondary"
      type="button"
    >
      <span
        class="text"
      >
        sulu_admin.cancel
      </span>
    </button>
    <button
      class="button link"
      type="button"
    >
      <span
        class="text"
      >
        sulu_admin.reset
      </span>
    </button>
    <button
      class="button primary"
      type="button"
    >
      <span
        class="text"
      >
        sulu_admin.apply
      </span>
    </button>
  </div>
</div>
`;

exports[`Render Item with data but without image 1`] = `
<div
  class="item"
>
  <div
    class="media"
  />
  <div
    class="content"
  >
    <p
      class="title"
    >
      Title
    </p>
    <p
      class="description"
    >
      Description

    </p>
  </div>
  <p
    class="type"
  >
    Page
  </p>
</div>
`;

exports[`Render Item without data 1`] = `
<div
  class="item"
>
  <div
    class="media"
  />
  <div
    class="content"
  >
    <p
      class="title"
    />
    <p
      class="description"
    />
  </div>
  <p
    class="type"
  >
    Page
  </p>
</div>
`;
